# FLP-Secret

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.MIT  README.md  build  main.cpp  secret.cpp  secret.hpp  version.cpp  version.hpp
src/: decrypt.rs  encrypt.rs  main.rs
