[package]
name = "flpsecret"
version = "2.0.0"
authors = ["Hakukano <flp.hakukano@gmail.com>"]
edition = "2018"
description = "A simple encrypt script"
repository = "https://github.com/Hakukano/FLP-Secret"
documentation = "https://docs.rs/flpsecret"
homepage = "https://flpsecret.rs/"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
num-traits = "0.2" 
rand = "0.7"
